<resources>
    <string name="app_name">menu</string>
    <string name="btnEspacioVacio">Espacio Vacio</string>
    <string name="btnRaiz">Raiz</string>
    <string name="btnSumar">Sumar</string>
    <string name="btnParImpar">Par Impar</string>
    <string name="btnRegresar">Regresar</string>
    <string name="txtSumar">Sumar 2 números</string>
    <string name="inputNumber1">Número 1</string>
    <string name="inputNumber2">Número 2</string>
    <string name="btnCalcular">Calcular</string>
    <string name="txtResultado">Resultado</string>
</resources>